2017-09-16  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/texinfo.tex: Use 'https' in preference to 'http' in comments.

2017-09-12  Gavin Smith  <gavinsmith0123@gmail.com>

	6.5 release.
	* configure.ac, NEWS, util/texi2dvi, util/texi2pdf,
	doc/refcard/txirefcard.tex: Version number.

2017-09-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* pretest 6.4.92
	* configure.ac: Update version.

2017-09-04  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Makefile.am (AM_T_LOG_FLAGS): Add "-I .".
	* tp/tests/run_parser_all.sh: Add "-I ." to perl invocations.
	Attempt at getting tests to work if . is not in @INC.  Report 
	from Patrice Dumas.

2017-09-02  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/infokey.c (compile): Support "1 menu-digit" in .infokey
	file in case this default binding is disabled for some reason.
	Clark Wang reported that "1 menu-digit" didn't work.

2017-08-29  Patrice Dumas  <pertusus@free.fr>

	* autogen.sh: update regeneration of tests makefile fragment to
	match the change in tp/Makefile.am associated with the removal
	of "long tests" in 2016-10-23.

2017-08-28  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/pseudotty.c: Open slave end of pseudoterminal outside of 
	a conditional block so that it will be open even if that block 
	is not executed.  Otherwise we could fail to turn off the 
	special interpretation of some characters (C-u, C-s) to the 
	terminal in time, leading some tests to fail.  Assaf Gordon 
	reported test failures for several platforms.

2017-08-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* pretest 6.4.91
	* configure.ac: Update version.

2017-08-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* NEWS: Add a couple of news items.

2017-08-25  Mathieu Lirzin  <mthl@gnu.org>

	* tp/Texinfo/Convert/HTML.pm (_default_node_redirection_page)
	(_default_begin_file): Move '$encoding' to the top of the '<head>'
	element.  This removes a warning in recent browsers that check if